# ordering-system

./: flake.nix
create-address-service/: .gitignore  README.md  dev_config.py  pyproject.toml
create-address-service/create_address_service/: __init__.py  app.py
create-address-service/tests/: test_create_address_service.py
ordering-api/: .gitignore  dev-wallet-rpc.conf  manage.py  pyproject.toml
ordering-api/gtf_order_api/: settings.py  urls.py
ordering-api/ordering_system/: asgi.py
ordering-api/orders/: admin.py  models.py  serializers.py  views.py
ordering-api/orders/management/commands/: process_payments.py  update_exchange_prices.py
ordering-api/orders/migrations/: 0001_initial.py
ordering-system/: manage.py  pyproject.toml
ordering-system/ordering_system/: settings.py  wsgi.py
