[tool.poetry]
name = "gtf_order_api"
version = "0.1.0"
description = ""
authors = ["Semicolon1647 <Semicolon1647@proton.me>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
